# TurtlebotAdapterTesi

Tesi_MCI/: human_adapter.py
Tesi_MCI/irobot_create_gazebo/irobot_create_gazebo_bringup/: CMakeLists.txt
Tesi_MCI/irobot_create_gazebo/irobot_create_gazebo_bringup/launch/: real_sim.launch.py
Tesi_MCI/irobot_create_gazebo/irobot_create_gazebo_bringup/maps/: map_aula.pgm  map_aula.yaml  sim_arena.yaml
Tesi_MCI/ros2_aruco/ros2_aruco/: package.xml  setup.py
Tesi_MCI/ros2_aruco/ros2_aruco/config/: aruco_parameters.yaml  parameter2.yaml
Tesi_MCI/ros2_aruco/ros2_aruco/launch/: aruco_recognition.launch.py
Tesi_MCI/ros2_aruco/ros2_aruco/ros2_aruco/: aruco_node.py  aruco_node2.py
Tesi_MCI/ros2_aruco/turtlebot_adapter/: setup.cfg  setup.py
Tesi_MCI/ros2_aruco/turtlebot_adapter/turtlebot_adapter/: turtlebot_adapter.py  turtlebot_adapter2.py
Tesi_MCI/turtlebot_adapter/: package.xml
Tesi_MCI/turtlebot_adapter/launch/: adapters.launch.py
Tesi_MCI/turtlebot_adapter/turtlebot_adapter/: turtlebot_adapter.py  turtlebot_adapter2.py
Tesi_MCI_real/irobot_create_gazebo/irobot_create_gazebo_bringup/maps/: sim_arena.pgm
pose_estimation_service/: package.xml  setup.cfg  setup.py
pose_estimation_service/pose_estimation_service/: pose_estimation.py
tutorial_interfaces/: CMakeLists.txt  package.xml
tutorial_interfaces/msg/: PoseErr.msg
tutorial_interfaces/srv/: Lidar.srv  PoseEstimation.srv
