<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pose_estimation_service</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="miri@todo.todo">miri</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <depend>rclpy</depend>
  <depend>tutorial_interfaces</depend>
  <depend>cv_bridge</depend>
  <depend>threading</depend>
  <depend>rclcpp</depend>
  <depend>math</depend>
  <depend>opencv-python</depend>
  <depend>opencv-contrib-python</depend>
  <depend>time</depend>
  <depend>numpy</depend>
  <depend>rcl_interfaces</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
